sandbox/raptor2/fp_raptor2.pas


function raptor_new_avltree(compare_handler:Traptor_data_compare_handler; free_handler:Traptor_data_free_handler; flags:dword):Praptor_avltree;cdecl;external libraptor2;
procedure raptor_free_avltree(tree:Praptor_avltree);cdecl;external libraptor2;
{ methods  }
function raptor_avltree_add(tree:Praptor_avltree; p_data:pointer):longint;cdecl;external libraptor2;
function raptor_avltree_remove(tree:Praptor_avltree; p_data:pointer):pointer;cdecl;external libraptor2;
function raptor_avltree_delete(tree:Praptor_avltree; p_data:pointer):longint;cdecl;external libraptor2;
procedure raptor_avltree_trim(tree:Praptor_avltree);cdecl;external libraptor2;
function raptor_avltree_search(tree:Praptor_avltree; p_data:pointer):pointer;cdecl;external libraptor2;
function raptor_avltree_visit(tree:Praptor_avltree; visit_handler:Traptor_avltree_visit_handler; user_data:pointer):longint;cdecl;external libraptor2;
function raptor_avltree_size(tree:Praptor_avltree):longint;cdecl;external libraptor2;
procedure raptor_avltree_set_print_handler(tree:Praptor_avltree; print_handler:Traptor_data_print_handler);cdecl;external libraptor2;
function raptor_avltree_print(tree:Praptor_avltree; stream:PFILE):longint;cdecl;external libraptor2;
function raptor_new_avltree_iterator(tree:Praptor_avltree; range:pointer; range_free_handler:Traptor_data_free_handler; direction:longint):Praptor_avltree_iterator;cdecl;external libraptor2;
procedure raptor_free_avltree_iterator(iterator:Praptor_avltree_iterator);cdecl;external libraptor2;
function raptor_avltree_iterator_is_end(iterator:Praptor_avltree_iterator):longint;cdecl;external libraptor2;
function raptor_avltree_iterator_next(iterator:Praptor_avltree_iterator):longint;cdecl;external libraptor2;
function raptor_avltree_iterator_get(iterator:Praptor_avltree_iterator):pointer;cdecl;external libraptor2;
{ utility methods  }
procedure raptor_sort_r(base:pointer; nel:Tsize_t; width:Tsize_t; compar:Traptor_data_compare_arg_handler; user_data:pointer);cdecl;external libraptor2;
{ C++ end of extern C conditionnal removed }
{$endif}

// === Konventiert am: 28-11-25 19:22:17 ===


implementation


{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function raptor_new_world : longint;
begin
  raptor_new_world:=raptor_new_world_internal(RAPTOR_VERSION);
end;


end.
